<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_beg"
    tools:context=".TermsActivity">

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:onClick="toBefore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        android:backgroundTint="@color/my_beg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/terms"
                android:textColor="@color/my_black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/my_black"
                android:text="@string/terms1" />

            <TextView
                android:id="@+id/textView30"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/my_black"
                android:text="@string/terms2" />

            <TextView
                android:id="@+id/textView31"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms3"
                android:textColor="@color/my_black"/>

            <TextView
                android:id="@+id/textView32"
                android:layout_marginTop="4dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms4"
                android:textColor="@color/my_black"/>

            <TextView
                android:id="@+id/textView33"
                android:layout_marginTop="1dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms5"
                android:textColor="@color/my_black"/>

            <TextView
                android:id="@+id/textView34"
                android:layout_marginTop="1dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms6"
                android:textColor="@color/my_black"/>

            <TextView
                android:id="@+id/textView35"
                android:layout_marginTop="1dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms7"
                android:textColor="@color/my_black"/>

            <TextView
                android:id="@+id/textView36"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/my_black"
                android:text="@string/terms8" />

            <TextView
                android:id="@+id/textView37"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/my_black"
                android:text="@string/terms9" />

            <TextView
                android:id="@+id/textView38"
                android:layout_marginTop="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/my_black"
                android:text="@string/terms10" />

            <TextView
                android:id="@+id/textView39"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/my_black"
                android:text="@string/terms11" />
            <TextView
                android:id="@+id/textView40"
                android:layout_marginTop="4dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/my_black"
                android:text="@string/terms12"/>

            <TextView
                android:id="@+id/textView41"
                android:layout_marginTop="4dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/my_black"
                android:text="@string/terms13" />
            <TextView
                android:id="@+id/textView42"
                android:layout_marginTop="4dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/my_black"
                android:text="@string/terms14" />
            <TextView
                android:id="@+id/textView43"
                android:layout_marginTop="4dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/my_black"
                android:text="@string/terms15" />
            <TextView
                android:id="@+id/textView44"
                android:layout_marginTop="4dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/my_black"
                android:text="@string/terms16" />

            <TextView
                android:id="@+id/textView46"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/my_black"
                android:text="@string/terms19" />
            <TextView
                android:id="@+id/textView45"
                android:layout_marginTop="4dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/my_black"
                android:text="@string/terms17" />
            <TextView
                android:id="@+id/textView47"
                android:layout_marginTop="4dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/my_black"
                android:text="@string/terms18" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>